# Gen3MapInterpreter

./: .gitignore  CMakeLists.txt  README.md
include/: FileHandler.hpp  LayoutMetatile.hpp  MapMetatile.hpp  MapProcessor.hpp  Metatile.hpp  Palette.hpp  Pixel.hpp  PngHandler.hpp  Tile.hpp  Tileset.hpp  global.hpp
src/: FileHandler.cpp  LayoutMetatile.cpp  MapMetatile.cpp  MapProcessor.cpp  Metatile.cpp  Palette.cpp  Pixel.cpp  PngHandler.cpp  Tile.cpp  Tileset.cpp  main.cpp
